package core; 

public interface IItem {

    public String getName();
    public double getPrice();

    
}
